--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 body{
@@ -21,7 +22,7 @@ body{
 .slideshow-container {
   position: relative;
   width: 100%;
-  height: 450px;
+  height: 94vh;
   overflow: hidden;
   border-radius: 1rem;
 }
@@ -56,4 +57,64 @@ body{
 /* Fade effect */
 .fade {
   animation: fadeEffect 1s ease-in-out;
+}
+
+/* nav bar */
+nav{
+  width: 100%;
+  background-color: var(--color-secondary);
+  color: white;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 40px;
+  position: fixed;
+  z-index: 1000;
+}
+
+nav ul {
+  display: flex;
+  width: 30%;
+  justify-content: space-around;
+
+}
+
+ul li ,li a{
+  list-style: none;
+  text-decoration: none;
+  color: white;
+  font-family: inherit;
+}
+
+/* Menu */
+.menu h1
+{
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.menu{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.menu-section{
+  color: var(--color-text);
+  background-color: var(--color-background); 
+  border-left: 5px solid var(--color-secondary); 
+  border-right: 5px solid var(--color-secondary); 
+  padding: 1rem 1.5rem;
+  border-radius: 0.5rem;
+  font-size: 1rem;
+  margin-top: 10px;
+}
+
+.menu-item
+{
+  display: grid;
+  grid-template-columns: 1fr 1fr 2fr;
+  gap: 10px;
+  margin-top: 10px;
 }
